# schema-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
schema_agent/: __init__.py  consts.py  errors.py  llm.py  str.py  types.py  utils.py
scripts/: demo.py
tests/: conftest.py  test_consts.py  test_errors.py  test_init.py  test_llm.py  test_str.py  test_types.py  test_utils.py
